--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                         <!-- Logo de la Universidad -->
                         <div class="university-logo">
-                            <img src="321-3210847_logo-de-umg-png.png" alt="Logo UMG" class="logo-img">
+                            <img src="./321-3210847_logo-de-umg-png.png" alt="Logo UMG" class="logo-img">
                         </div>
 
                         <!-- Título de la presentación -->
@@ -63,21 +63,102 @@
                 </div>
             </section>
 
-            <!-- Slides de contenido reducidos por espacio -->
+            <!-- Slide 2 -->
             <section class="slide" data-slide="2">
-                <div class="slide-content"><h2 class="slide-title">Contexto Histórico</h2></div>
+                <div class="slide-content">
+                    <h2 class="slide-title">Contexto Histórico</h2>
+                    <ul>
+                        <li>Modelo geocéntrico de los griegos.</li>
+                        <li>Aristóteles y la Iglesia defendían el círculo perfecto.</li>
+                        <li>Solo se conocían 5 planetas además de la Tierra.</li>
+                    </ul>
+                </div>
             </section>
 
+            <!-- Slide 3 -->
+            <section class="slide" data-slide="3">
+                <div class="slide-content">
+                    <h2 class="slide-title">Johannes Kepler</h2>
+                    <p>Astrónomo alemán (1571–1630), colaborador de Tycho Brahe.</p>
+                    <p>En 1609 publicó <strong>Astronomia Nova</strong>, base de sus tres leyes.</p>
+                </div>
+            </section>
+
+            <!-- Slide 4 -->
+            <section class="slide" data-slide="4">
+                <div class="slide-content">
+                    <h2 class="slide-title">Primera Ley</h2>
+                    <p>Los planetas describen órbitas elípticas con el Sol en uno de los focos.</p>
+                    <img src="https://cdn.abacus.ai/images/14fa4591-3566-492c-bd3c-595f3f43be25.png" class="law-diagram">
+                </div>
+            </section>
+
+            <!-- Slide 5 -->
+            <section class="slide" data-slide="5">
+                <div class="slide-content">
+                    <h2 class="slide-title">Segunda Ley</h2>
+                    <p>El radio vector que une un planeta con el Sol barre áreas iguales en tiempos iguales.</p>
+                    <img src="https://cdn.abacus.ai/images/8e4b5486-6c84-4aa5-a4f7-b1f86fa8cb2a.png" class="law-diagram">
+                </div>
+            </section>
+
+            <!-- Slide 6 -->
+            <section class="slide" data-slide="6">
+                <div class="slide-content">
+                    <h2 class="slide-title">Tercera Ley</h2>
+                    <p>El cuadrado del período orbital (T²) es proporcional al cubo de la distancia media al Sol (r³).</p>
+                </div>
+            </section>
+
+            <!-- Slide 7 -->
+            <section class="slide" data-slide="7">
+                <div class="slide-content">
+                    <h2 class="slide-title">Legado Científico</h2>
+                    <p>Base de la gravitación de Newton y confirmada siglos después por Einstein.</p>
+                </div>
+            </section>
+
+            <!-- Slide 8 -->
+            <section class="slide" data-slide="8">
+                <div class="slide-content">
+                    <h2 class="slide-title">Impacto</h2>
+                    <p>Sus leyes permiten calcular órbitas de satélites, misiones espaciales y descubrimiento de exoplanetas.</p>
+                    <img src="https://cdn.abacus.ai/images/e000e9df-8fab-4f57-bc9d-2e8f255daa93.png" class="law-diagram">
+                </div>
+            </section>
+
+            <!-- Slide 9 -->
+            <section class="slide" data-slide="9">
+                <div class="slide-content">
+                    <h2 class="slide-title">Reflexión</h2>
+                    <p>Kepler mostró <em>cómo</em> se mueven los planetas; Newton explicó el <em>por qué</em>.</p>
+                </div>
+            </section>
+
+            <!-- Slide 10 -->
             <section class="slide" data-slide="10">
-                <div class="slide-content"><h2 class="slide-title">Conclusión</h2></div>
+                <div class="slide-content">
+                    <h2 class="slide-title">Conclusión</h2>
+                    <p>Las Leyes de Kepler siguen siendo pilares de la astronomía moderna y la exploración espacial.</p>
+                </div>
             </section>
         </main>
+
+        <!-- Dots de navegación -->
         <div class="slide-dots" id="slideDots">
             <button class="dot active" data-slide="1"></button>
             <button class="dot" data-slide="2"></button>
+            <button class="dot" data-slide="3"></button>
+            <button class="dot" data-slide="4"></button>
+            <button class="dot" data-slide="5"></button>
+            <button class="dot" data-slide="6"></button>
+            <button class="dot" data-slide="7"></button>
+            <button class="dot" data-slide="8"></button>
+            <button class="dot" data-slide="9"></button>
             <button class="dot" data-slide="10"></button>
         </div>
     </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
