--- a/index.html
+++ b/index.html
@@ -34,112 +34,128 @@
             <section class="slide active" data-slide="1">
                 <div class="slide-content">
                     <div class="hero-section">
-
-                        <!-- Logo de la Universidad -->
                         <div class="university-logo">
                             <img src="./321-3210847_logo-de-umg-png.png" alt="Logo UMG" class="logo-img">
                         </div>
-
-                        <!-- Título de la presentación -->
                         <h1 class="hero-title">Las Leyes de Kepler</h1>
                         <h2 class="hero-subtitle">El Estudio del Movimiento Planetario</h2>
-
-                        <!-- Información personal -->
                         <div class="student-info">
                             <p><strong>Universidad Mariano Gálvez</strong> – Ciudad de Guatemala</p>
                             <p><strong>Curso:</strong> Física 1</p>
                             <p><strong>Alumno:</strong> Mateo B Vásquez B</p>
                             <p><strong>Carné:</strong> 7065-24-5549</p>
                         </div>
-
-                        <!-- Imagen Kepler -->
                         <div class="hero-image">
-                            <img src="https://cdn.abacus.ai/images/fd3ed351-55bd-4fd6-b2fa-853daf045497.png" 
-                                 alt="Johannes Kepler" class="responsive-img">
+                            <img src="https://cdn.abacus.ai/images/fd3ed351-55bd-4fd6-b2fa-853daf045497.png" alt="Johannes Kepler" class="responsive-img">
                         </div>
-
                         <p class="hero-description">Una revolución científica que cambió nuestra comprensión del cosmos</p>
                     </div>
                 </div>
             </section>
 
-            <!-- Slide 2 -->
+            <!-- Slide 2: Contexto Histórico -->
             <section class="slide" data-slide="2">
                 <div class="slide-content">
                     <h2 class="slide-title">Contexto Histórico</h2>
                     <ul>
-                        <li>Modelo geocéntrico de los griegos.</li>
-                        <li>Aristóteles y la Iglesia defendían el círculo perfecto.</li>
-                        <li>Solo se conocían 5 planetas además de la Tierra.</li>
+                        <li>Predominaba el <strong>modelo geocéntrico</strong> (Tierra inmóvil en el centro).</li>
+                        <li>Aristóteles defendía que los astros se movían en <em>círculos perfectos</em>.</li>
+                        <li>La Iglesia adoptó estas ideas como verdad durante siglos.</li>
+                        <li>Solo se conocían 5 planetas además de la Tierra (Mercurio, Venus, Marte, Júpiter y Saturno).</li>
                     </ul>
                 </div>
             </section>
 
-            <!-- Slide 3 -->
+            <!-- Slide 3: Johannes Kepler -->
             <section class="slide" data-slide="3">
                 <div class="slide-content">
                     <h2 class="slide-title">Johannes Kepler</h2>
-                    <p>Astrónomo alemán (1571–1630), colaborador de Tycho Brahe.</p>
-                    <p>En 1609 publicó <strong>Astronomia Nova</strong>, base de sus tres leyes.</p>
+                    <p>Astrónomo alemán (1571–1630).</p>
+                    <p>Discípulo y colaborador de <strong>Tycho Brahe</strong>.</p>
+                    <p>En 1609 publicó <strong>Astronomia Nova</strong> (con dos primeras leyes).</p>
+                    <p>En 1619 publicó <strong>Harmonices Mundi</strong>, donde formuló la tercera ley.</p>
                 </div>
             </section>
 
-            <!-- Slide 4 -->
+            <!-- Slide 4: Primera Ley -->
             <section class="slide" data-slide="4">
                 <div class="slide-content">
-                    <h2 class="slide-title">Primera Ley</h2>
+                    <h2 class="slide-title">Primera Ley: Órbitas Elípticas</h2>
                     <p>Los planetas describen órbitas elípticas con el Sol en uno de los focos.</p>
+                    <p>Esto rompió con la idea aristotélica del <em>círculo perfecto</em>.</p>
+                    <p>Ejemplo: la órbita de Marte fue la primera que Kepler explicó con esta ley.</p>
                     <img src="https://cdn.abacus.ai/images/14fa4591-3566-492c-bd3c-595f3f43be25.png" class="law-diagram">
                 </div>
             </section>
 
-            <!-- Slide 5 -->
+            <!-- Slide 5: Segunda Ley -->
             <section class="slide" data-slide="5">
                 <div class="slide-content">
-                    <h2 class="slide-title">Segunda Ley</h2>
-                    <p>El radio vector que une un planeta con el Sol barre áreas iguales en tiempos iguales.</p>
+                    <h2 class="slide-title">Segunda Ley: Áreas Iguales</h2>
+                    <p>El radio vector que une el planeta con el Sol barre <strong>áreas iguales en tiempos iguales</strong>.</p>
+                    <p>Conclusión: Los planetas varían su velocidad.</p>
+                    <ul>
+                        <li>Más rápido en <strong>perihelio</strong> (cerca del Sol).</li>
+                        <li>Más lento en <strong>afelio</strong> (lejos del Sol).</li>
+                    </ul>
                     <img src="https://cdn.abacus.ai/images/8e4b5486-6c84-4aa5-a4f7-b1f86fa8cb2a.png" class="law-diagram">
                 </div>
             </section>
 
-            <!-- Slide 6 -->
+            <!-- Slide 6: Tercera Ley -->
             <section class="slide" data-slide="6">
                 <div class="slide-content">
-                    <h2 class="slide-title">Tercera Ley</h2>
-                    <p>El cuadrado del período orbital (T²) es proporcional al cubo de la distancia media al Sol (r³).</p>
+                    <h2 class="slide-title">Tercera Ley: Ley de la Armonía</h2>
+                    <p>Relaciona el tiempo de la órbita (T) con la distancia media (r):</p>
+                    <pre><code>T² ∝ r³</code></pre>
+                    <p>Permite comparar diferentes planetas o satélites.</p>
+                    <p>Ejemplo: Sirve para calcular el tiempo de un satélite en órbita terrestre.</p>
                 </div>
             </section>
 
-            <!-- Slide 7 -->
+            <!-- Slide 7: Legado Científico -->
             <section class="slide" data-slide="7">
                 <div class="slide-content">
                     <h2 class="slide-title">Legado Científico</h2>
-                    <p>Base de la gravitación de Newton y confirmada siglos después por Einstein.</p>
+                    <ul>
+                        <li>Inspiraron la <strong>Ley de Gravitación Universal</strong> de Newton.</li>
+                        <li>Mostraron que el cosmos se rige por <strong>leyes matemáticas precisas</strong>.</li>
+                        <li>Transformaron la visión de un universo estático a un mecanismo dinámico.</li>
+                    </ul>
                 </div>
             </section>
 
-            <!-- Slide 8 -->
+            <!-- Slide 8: Impacto en la Actualidad -->
             <section class="slide" data-slide="8">
                 <div class="slide-content">
-                    <h2 class="slide-title">Impacto</h2>
-                    <p>Sus leyes permiten calcular órbitas de satélites, misiones espaciales y descubrimiento de exoplanetas.</p>
+                    <h2 class="slide-title">Impacto en la Actualidad</h2>
+                    <p>Las leyes de Kepler tienen aplicaciones modernas:</p>
+                    <ul>
+                        <li>Misiones espaciales de la NASA y agencias internacionales.</li>
+                        <li>Cálculo de trayectorias de satélites y cohetes.</li>
+                        <li>Descubrimiento de exoplanetas.</li>
+                        <li>Aplicaciones prácticas: GPS y telecomunicaciones.</li>
+                    </ul>
                     <img src="https://cdn.abacus.ai/images/e000e9df-8fab-4f57-bc9d-2e8f255daa93.png" class="law-diagram">
                 </div>
             </section>
 
-            <!-- Slide 9 -->
+            <!-- Slide 9: Reflexión -->
             <section class="slide" data-slide="9">
                 <div class="slide-content">
                     <h2 class="slide-title">Reflexión</h2>
-                    <p>Kepler mostró <em>cómo</em> se mueven los planetas; Newton explicó el <em>por qué</em>.</p>
+                    <p>Kepler explicó <em>cómo</em> se mueven los planetas.</p>
+                    <p>Newton explicó el <em>por qué</em> gracias a la gravedad.</p>
+                    <p>Einstein perfeccionó las leyes con su <strong>Teoría de la Relatividad</strong>.</p>
                 </div>
             </section>
 
-            <!-- Slide 10 -->
+            <!-- Slide 10: Conclusión -->
             <section class="slide" data-slide="10">
                 <div class="slide-content">
                     <h2 class="slide-title">Conclusión</h2>
-                    <p>Las Leyes de Kepler siguen siendo pilares de la astronomía moderna y la exploración espacial.</p>
+                    <p>Las leyes de Kepler son pilares de la física y la astronomía moderna.</p>
+                    <p>Permiten comprender el universo desde los eclipses antiguos hasta las misiones a Marte.</p>
                 </div>
             </section>
         </main>
