--- a/index.html
+++ b/index.html
@@ -31,27 +31,34 @@
         <main class="slides-container" id="slidesContainer">
 
             <!-- Slide 1: Portada -->
-            <section class="slide active" data-slide="1">
-                <div class="slide-content">
-                    <div class="hero-section">
-                        <div class="university-logo">
-                            <img src="./321-3210847_logo-de-umg-png.png" alt="Logo UMG" class="logo-img">
-                        </div>
-                        <h1 class="hero-title">Las Leyes de Kepler</h1>
-                        <h2 class="hero-subtitle">El Estudio del Movimiento Planetario</h2>
-                        <div class="student-info">
-                            <p><strong>Universidad Mariano Gálvez</strong> – Ciudad de Guatemala</p>
-                            <p><strong>Curso:</strong> Física 1</p>
-                            <p><strong>Alumno:</strong> Mateo B Vásquez B</p>
-                            <p><strong>Carné:</strong> 7065-24-5549</p>
-                        </div>
-                        <div class="hero-image">
-                            <img src="https://cdn.abacus.ai/images/fd3ed351-55bd-4fd6-b2fa-853daf045497.png" alt="Johannes Kepler" class="responsive-img">
-                        </div>
-                        <p class="hero-description">Una revolución científica que cambió nuestra comprensión del cosmos</p>
-                    </div>
-                </div>
-            </section>
+            
+<section class="slide active" data-slide="1">
+  <div class="slide-content hero-layout">
+    
+    <!-- Columna izquierda: Logo -->
+    <div class="hero-left">
+      <img src="./321-3210847_logo-de-umg-png.png" alt="Logo UMG" class="logo-big">
+    </div>
+
+    <!-- Columna derecha: Título + info + Kepler -->
+    <div class="hero-right">
+      <h1 class="hero-title">Las Leyes de Kepler</h1>
+      <h2 class="hero-subtitle">El Estudio del Movimiento Planetario</h2>
+
+      <div class="student-info">
+        <p><strong>Universidad Mariano Gálvez</strong> – Ciudad de Guatemala</p>
+        <p><strong>Curso:</strong> Física 1</p>
+        <p><strong>Alumno:</strong> Mateo B Vásquez B</p>
+        <p><strong>Carné:</strong> 7065-24-5549</p>
+      </div>
+
+      <div class="hero-image">
+        <img src="https://cdn.abacus.ai/images/fd3ed351-55bd-4fd6-b2fa-853daf045497.png" alt="Johannes Kepler" class="responsive-img">
+      </div>
+
+    </div>
+  </div>
+</section>
 
             <!-- Slide 2: Contexto Histórico -->
             <section class="slide" data-slide="2">
