--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Slide 1: Portada -->
             
 <section class="slide active" data-slide="1">
-  <div class="slide-content hero-layout">
+  <div class="slide-content hero-grid">
     
     <!-- Columna izquierda: Logo -->
     <div class="hero-left">
@@ -55,7 +55,6 @@
       <div class="hero-image">
         <img src="https://cdn.abacus.ai/images/fd3ed351-55bd-4fd6-b2fa-853daf045497.png" alt="Johannes Kepler" class="responsive-img">
       </div>
-
     </div>
   </div>
 </section>
