--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <img src="./321-3210847_logo-de-umg-png.png" alt="Logo UMG" class="logo-big">
     </div>
 
-    <!-- Columna derecha: Título + info + Kepler -->
+    <!-- Columna derecha -->
     <div class="hero-right">
       <h1 class="hero-title">Las Leyes de Kepler</h1>
       <h2 class="hero-subtitle">El Estudio del Movimiento Planetario</h2>
@@ -56,6 +56,7 @@
         <img src="https://cdn.abacus.ai/images/fd3ed351-55bd-4fd6-b2fa-853daf045497.png" alt="Johannes Kepler" class="responsive-img">
       </div>
     </div>
+
   </div>
 </section>
 
