--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
       <img src="./321-3210847_logo-de-umg-png.png" alt="Logo UMG" class="logo-big">
     </div>
 
-    <!-- Columna derecha -->
-    <div class="hero-right">
-      <h1 class="hero-title">Las Leyes de Kepler</h1>
-      <h2 class="hero-subtitle">El Estudio del Movimiento Planetario</h2>
+  <!-- Columna derecha: Título + info + Kepler -->
+<div class="hero-right">
+  <div class="hero-card">
+    <h1 class="hero-title">Las Leyes de Kepler</h1>
+    <h2 class="hero-subtitle">El Estudio del Movimiento Planetario</h2>
 
-      <div class="student-info">
-        <p><strong>Universidad Mariano Gálvez</strong> – Ciudad de Guatemala</p>
-        <p><strong>Curso:</strong> Física 1</p>
-        <p><strong>Alumno:</strong> Mateo B Vásquez B</p>
-        <p><strong>Carné:</strong> 7065-24-5549</p>
-      </div>
-
-      <div class="hero-image">
-        <img src="https://cdn.abacus.ai/images/fd3ed351-55bd-4fd6-b2fa-853daf045497.png" alt="Johannes Kepler" class="responsive-img">
-      </div>
+    <div class="student-info">
+      <p><strong>Universidad Mariano Gálvez</strong> – Ciudad de Guatemala</p>
+      <p><strong>Curso:</strong> Física 1</p>
+      <p><strong>Alumno:</strong> Mateo B Vásquez B</p>
+      <p><strong>Carné:</strong> 7065-24-5549</p>
     </div>
 
+    <div class="hero-image">
+      <img src="https://cdn.abacus.ai/images/fd3ed351-55bd-4fd6-b2fa-853daf045497.png" alt="Johannes Kepler" class="responsive-img">
+    </div>
   </div>
+</div>
 </section>
 
             <!-- Slide 2: Contexto Histórico -->
